--- a/FloEngineTK.Core/FloEngineTK.Core.csproj
+++ b/FloEngineTK.Core/FloEngineTK.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.9.3" />
     <PackageReference Include="OpenTK.Mathematics" Version="4.9.3" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
